# postgres_secrets

./: Cargo.toml  README.md
proptest-regressions/pgpass/: mod.txt
src/: doctest_utils.rs  lib.rs
src/pgpass/: mod.rs  pattern.rs
src/pgpass/parser/: credential_pattern.rs  field.rs  ignored.rs  mod.rs  port.rs
