[package]
name = "postgres_secrets"
version = "1.0.0"
edition = "2021"
license = "Unlicense"
description = "Secure access to Postgres credentials."
keywords = ["postgres", "postgresql"]
categories = ["database"]
repository = "https://github.com/MaxBondABE/postgres_secrets"
readme = "README.md"
homepage = "https://github.com/MaxBondABE/postgres_secrets"

[dependencies]
home = "0.5.9"
log = { version = "0.4.22", features = ["std"] }
nom = "7.1.3"
postgres = "0.19.9"
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "2.0.1"

[dev-dependencies]
anyhow = "1.0.93"
proptest = "1.5.0"
